app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: laravel-app
  template:
    metadata:
      labels:
        app: laravel-app
    spec:
      containers:
      - name: laravel
        image: aelmas0/vetcare-laravel-cdv:latest
        ports:
          - containerPort: 8000
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 500m
