fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-service
spec:
  type: ClusterIP
  selector:
    app: fe-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
